# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
src/advent_of_code_2024/: __about__.py  aoc.py  day.py  utils.py
src/advent_of_code_2024/days/: template.py
src/advent_of_code_2024/days/10/: solution.py
src/advent_of_code_2024/days/11/: solution.py
src/advent_of_code_2024/days/12/: solution.py
src/advent_of_code_2024/days/13/: solution.py
src/advent_of_code_2024/days/14/: solution.py
src/advent_of_code_2024/days/15/: solution.py
src/advent_of_code_2024/days/2/: solution.py
src/advent_of_code_2024/days/3/: solution.py
src/advent_of_code_2024/days/4/: solution.py
src/advent_of_code_2024/days/5/: solution.py
src/advent_of_code_2024/days/6/: solution.py
src/advent_of_code_2024/days/7/: solution.py
src/advent_of_code_2024/days/8/: solution.py
src/advent_of_code_2024/days/9/: solution.py
tests/: __init__.py
