[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code-2024"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Patric Tirri", email = "patrictirri@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Patric Tirri/advent-of-code-2024#readme"
Issues = "https://github.com/Patric Tirri/advent-of-code-2024/issues"
Source = "https://github.com/Patric Tirri/advent-of-code-2024"

[project.scripts]
aoc = "advent_of_code_2024.aoc:main"
day = "advent_of_code_2024.day:main"

[tool.hatch.version]
path = "src/advent_of_code_2024/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/advent_of_code_2024 tests}"

[tool.coverage.run]
source_pkgs = ["advent_of_code_2024", "tests"]
branch = true
parallel = true
omit = [
  "src/advent_of_code_2024/__about__.py",
]

[tool.coverage.paths]
advent_of_code_2024 = ["src/advent_of_code_2024", "*/advent-of-code-2024/src/advent_of_code_2024"]
tests = ["tests", "*/advent-of-code-2024/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
